--- a/index.html
+++ b/index.html
@@ -1,1 +1,95 @@
-hello world 
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Welcome!</title>
+        <link href="./stylesheet.css" rel="stylesheet">
+    </head>
+    <body>
+        <div class="wrapper">
+            <h2 id = "heading" > Yuqi Pan</h2>
+            <h2 id = "heading"> (210)765-4007 | <a href="https://www.linkedin.com/in/yuqipan/"> LinkedIn</a> </h2>
+            <img id = "heading" src="./CW1_Pan_Yuqi.JPG" alt="Yuqi" >
+        </div>
+        <div class="wrapper">
+            <subhead> EXPERIENCE </subhead>
+            <p>
+
+            </p>
+            <subhead>
+                HP Inc. 													    Spring, TX </subhead>
+            <p>
+            End-point Security Controller (EpSC) Intern 					May 2022 - August 2022
+            </p>
+            <p>
+                Developed code in C to diagnose hardware issues through a computer’s Embedded Controller (EC)
+            </p>
+            <p>
+                Simulated hardware issues to develop tests and demonstrations of diagnostic messages 
+            </p>
+            <p>
+                Planned project timeline under agile development procedures 
+            </p>
+            <p>
+                Constructed a presentation about the project which was selected to be presented to HP executives 
+            </p>
+            <p>
+                Won Crowd Favorite Technical Project at the HP Intern Fair 
+            </p>
+            <subhead>Stampede, UT RoboMaster Robotics Team 								    Austin, TX</subhead>
+            <p>
+            RoboMaster Committee Head and RoboMaster Embedded Co-lead				August 2021-Present
+            </p>
+            <p>
+                Devised and implemented wiring for all systems of the robot, including a continuously rotating gimbal
+            </p>
+            <p>
+                Coded interactions between sensors in C++ for robot controls like field-oriented driving 
+            </p>
+            <p>
+                Created documentation including code development environment setup and wiring diagrams
+            </p>
+            <p>
+                Built team organization and coordinated 100+ members at club meetings 
+            </p>
+            <p>
+                Led team to Fourth place at the 2022 RoboMaster North America competition
+            </p>
+            <subhead> IEEE Robotics and Automation Society (RAS), UT Austin           						    Austin, TX</subhead>
+            <p>
+            Vice-President 										             August 2022- Present
+            </p>
+            <p>
+            Secretary and Publicity Coordinator 							       January 2021- May 2022
+            </p>
+            <p>
+                Organized and planned club meetings with 500+ members 
+            </p>
+            <p>
+                Informed and communicated the RAS mission statement to 1000+ UT Students at outreach events
+            </p>
+            <p>
+                Designed promotional materials like logos, shirts, and fliers to publicize events to members and the public
+            </p>
+        </div>
+        <div class = "wrapper">
+            <subhead>PROJECTS</subhead>
+            <p>   
+
+            </p>
+            <subhead>Embedded Systems Final Project, The University of Texas at Austin 			August 2022-December 2022</subhead>
+            <p>
+                Manufactured and designed a PCB in Eagle for a walkie-talkie
+            </p>
+            <p>
+                Interfaced with a chip to send and receive data wirelessly using radio waves 
+            </p>
+            <subhead>Connected Autonomous Electic Vehicles Simulations, The University of Texas at Austin 		March 2022-Present</subhead>
+            <p>
+                Simulated autonomous driving with sensor inputs like LiDAR for object avoidance algorithm 
+            </p>
+            <p>
+                Derived mathematical equations to simulate driving in MATLAB using Vehicle Dynamics Blockset
+            </p>
+        </div>
+    </body>
+</html>
