--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <title>Welcome!</title>
         <link href="./stylesheet.css" rel="stylesheet">
+        <meta charset="UTF-8">
+        <meta name="name" content="Yuqi Pan">
+        <meta name="ece" content="University of Austin, UT, Austin">
+        <meta name="skills" content="Java, Python, C, C++, HTML, Matlab">
     </head>
     <body>
         <div class="wrapper">
